2003-07-12  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/statfs.h (_STATFS_F_FRSIZE): Define.
	* sysdeps/unix/sysv/linux/alpha/bits/statfs.h (_STATFS_F_FRSIZE):
	Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/statfs.h (_STATFS_F_FRSIZE):
	Likewise.

	* sysdeps/unix/sysv/linux/kernel-features.h: Define
	__ASSUME_UTIMES for x86 and kernels > 2.5.75.

	* sysdeps/unix/sysv/linux/futimes.c (__futimes): Handle case with
	second parameter == NULL.
	* sysdeps/unix/sysv/linux/utimes.c: New file.

2003-07-12  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/futimes.c: Include kernel-features.h.
	* sysdeps/unix/sysv/linux/kernel-features.h (__ASSUME_UTIMES): Fix
	a typo.

2003-07-12  Ulrich Drepper  <drepper@redhat.com>

	* time/sys/time.h: Namespace cleanup.
	* sysdeps/unix/sysv/linux/kernel-features.h: Define
	__ASSUME_UTIMES for the architectures which always had the syscall.
	* sysdeps/unix/sysv/linux/futimes.c: New file.

2003-07-12  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/unix/sysv/linux/sh/socket.S: Save and restore the PR
	register across CENABLE and CDISABLE.

2003-07-11  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sigwait.c: Include string.h.
	* sysdeps/unix/sysv/linux/sigwaitinfo.c: Likewise.
	* sysdeps/unix/sysv/linux/sigtimedwait.c: Likewise.
	* sysdeps/unix/sysv/linux/sleep.c (__sleep): Cast value to unsigned
	int before assigning to max to avoid warnings.

2003-07-11  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/socket.S (__socket): Add
	cfi directives.
	* sysdeps/unix/sysv/linux/s390/s390-32/socket.S (__socket): Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-64/socket.S (__socket): Likewise.

2003-07-10  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/powerpc/powerpc64/elf/start.S: Set section flags of
	.data.rel.ro.local to "aw".

2003-07-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/m68k/Makefile: Remove CLFAGS-.oS addition.