@@ -234,6 +234,12 @@
 # define __ASSUME_NEW_PRCTL_SYSCALL		1
 #endif
 
+/* Starting with 2.4.21 the PowerPC32 clone syscall works as expected.  */
+#if __LINUX_KERNEL_VERSION >= (132096+21) && defined __powerpc__ \
+    && !defined __powerpc64__
+# define __ASSUME_FIXED_CLONE_SYSCALL		1
+#endif
+
 /* Starting with 2.4.21 PowerPC64 implements the new rt_sigreturn syscall.
    The new rt_sigreturn takes an ucontext pointer allowing rt_sigreturn
    to be used in the set/swapcontext implementation.  */
@@ -341,8 +347,11 @@
 # define __ASSUME_CORRECT_SI_PID	1
 #endif
 
-/* The tgkill syscall was instroduced for i386 in 2.5.75.  */
-#if __LINUX_KERNEL_VERSION >= 132427 && defined __i386__
+/* The tgkill syscall was instroduced for i386 in 2.5.75.  For Alpha
+   it was introduced in 2.6.0-test1 which unfortunately cannot be
+   distinguished from 2.6.0.  */
+#if (__LINUX_KERNEL_VERSION >= 132427 && defined __i386__) \
+    || (__LINUX_KERNEL_VERSION >= 132609 && defined __alpha__) \
 # define __ASSUME_TGKILL	1
 #endif
 
